# ersha-os

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  flake.nix
ersha-core/: Cargo.toml
ersha-core/src/: lib.rs
ersha-dashboard/: Cargo.toml
ersha-dispatch/: Cargo.toml  ersha-dispatch.toml
ersha-dispatch/src/: config.rs  lib.rs  main.rs
ersha-dispatch/src/edge/: mock.rs  mod.rs
ersha-dispatch/src/storage/: memory.rs  mod.rs  models.rs  sqlite.rs
ersha-dispatch/tests/: storage_memory.rs
ersha-edge/: Cargo.toml
ersha-edge/src/: engine.rs  lib.rs  sensor.rs  transport.rs
ersha-grafana/: Justfile
ersha-grafana/jsonnet/dashboards/: device-health.jsonnet  overview.jsonnet  world-map.jsonnet
ersha-grafana/jsonnet/lib/: common.libsonnet
ersha-grafana/provisioning/alerting/: alert-rules.yml
ersha-grafana/provisioning/dashboards/: dashboards.yml
ersha-prime/: Cargo.toml  ersha-prime.toml
ersha-prime/examples/: clickhouse_test.rs
ersha-prime/migrations/: 001_init.sql
ersha-prime/src/: client.rs  config.rs  lib.rs  main.rs
ersha-prime/src/api/: devices.rs  dispatchers.rs  mod.rs
ersha-prime/src/registry/: filter.rs  memory.rs  mod.rs  sqlite.rs
ersha-prime/src/registry/memory/: device.rs  device_status.rs  dispatcher.rs  mod.rs  reading.rs
ersha-rpc/: Cargo.toml
ersha-rpc/examples/: client.rs  server.rs
ersha-rpc/src/: client.rs  frame.rs  lib.rs  message.rs  rpc.rs  server.rs
ersha-tls/: Makefile  README.md
ersha-tls/src/: lib.rs
examples/rp235x/: Cargo.toml
examples/rp235x/src/: main.rs
examples/server/src/: main.rs
(+3 files in other folders)
